# fcitx5-chatgpt-ime

./: .gitmodules  LICENSE  README.md
chatgpt-ime/: README.md  go.mod
chatgpt-ime/cmd/: main.go
chatgpt-ime/openai/: client.go
fcitx5-chatgpt/: .gitignore  CMakeLists.txt  README.md
fcitx5-chatgpt/src/: CMakeLists.txt  chatgpt-addon.conf.in.in  chatgpt.conf.in  engine.cpp  engine.h  hiraganatable.cpp  hiraganatable.h  imeclient.cpp  imeclient.h
